Row and Holder management in Tier